fix: update preload href to match renamed stylesheet file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Exclusive AI Art Collection - Join My Patreon</title>
     
     <!-- Preload critical resources -->
-    <link rel="preload" href="styles.css" as="style">
+    <link rel="preload" href="styles-new.css" as="style">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500&display=swap" as="style">
     
     <link rel="stylesheet" href="styles-new.css">
